--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <header class="hero">
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
-            <p class="hero__text"> O maior evento de tecnologia do brasil começa em 10d 12h 32min 15s</p>
+            <p class="hero__text"> O maior evento de tecnologia do brasil começa em <span class="contador"></span></p>
 
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
